docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxyy1bhsk7rjbc00d8hrewj6
branchName: main
commitSha: 8db797085dc2719b854d6117f1751af2b603b162
commitUrl: https://github.com/Redocly/redocly/commit/8db797085dc2719b854d6117f1751af2b603b162

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -23995,3 +23995,10 @@ reunite:
       patch:
         - Fixed project build failure when `redocly.yaml` was missing.
     dependencies: {}
+  v2025-06-17.2:
+    timestamp: 1750162356000
+    changes:
+      minor: []
+      patch:
+        - Fixed file path insertion in the editor for non-Markdown files by using plain paths instead of Markdown link format.
+    dependencies: {}
