docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jy14qcyvy86w746ens3sa4ch
branchName: main
commitSha: 783189877b9ecef5e9fc51d712b95d9df1f1b255
commitUrl: https://github.com/Redocly/redocly/commit/783189877b9ecef5e9fc51d712b95d9df1f1b255

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,20 @@
 '@redocly/realm':
+  0.123.0-next.5:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch:
+        - Removed headers from page data to prevent exposing sensitive cookie information.
+        - Fixed `apiFunctions.folders` configuration to correctly handle custom folder paths with leading or trailing slashes.
+        - Fixed keyboard accessibility issues in sidebar elements that prevented focusing and clicking.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750178129`.
+        - Removed a warning about the React Router future flag from the browser console.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.4
+      '@redocly/asyncapi-docs': 0.4.0-next.4
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.4
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.4
   0.123.0-next.4:
     timestamp: 1750098674000
     changes:
@@ -3307,6 +3323,22 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.5:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch:
+        - Removed headers from page data to prevent exposing sensitive cookie information.
+        - Fixed `apiFunctions.folders` configuration to correctly handle custom folder paths with leading or trailing slashes.
+        - Fixed keyboard accessibility issues in sidebar elements that prevented focusing and clicking.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750178129`.
+        - Removed a warning about the React Router future flag from the browser console.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.4
+      '@redocly/asyncapi-docs': 0.4.0-next.4
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.4
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.4
   0.123.0-next.4:
     timestamp: 1750098674000
     changes:
@@ -5930,6 +5962,21 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.5:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch:
+        - Removed headers from page data to prevent exposing sensitive cookie information.
+        - Fixed keyboard accessibility issues in sidebar elements that prevented focusing and clicking.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750178129`.
+        - Removed a warning about the React Router future flag from the browser console.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.4
+      '@redocly/asyncapi-docs': 0.4.0-next.4
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.4
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.4
   0.123.0-next.4:
     timestamp: 1750098674000
     changes:
@@ -8554,6 +8601,21 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.5:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch:
+        - Removed headers from page data to prevent exposing sensitive cookie information.
+        - Fixed keyboard accessibility issues in sidebar elements that prevented focusing and clicking.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750178129`.
+        - Removed a warning about the React Router future flag from the browser console.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.4
+      '@redocly/asyncapi-docs': 0.4.0-next.4
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.4
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.4
   0.123.0-next.4:
     timestamp: 1750098674000
     changes:
@@ -11168,6 +11230,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.4:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch:
+        - Fixed keyboard accessibility issues in sidebar elements that prevented focusing and clicking.
+    dependencies: {}
   0.55.0-next.3:
     timestamp: 1750087903000
     changes:
@@ -13032,6 +13101,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.4:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.4
   3.11.0-next.3:
     timestamp: 1750087903000
     changes:
@@ -16075,6 +16151,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.5:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.123.0-next.5
+      '@redocly/redoc': 0.123.0-next.5
+      '@redocly/redoc-reef': 0.123.0-next.5
+      '@redocly/redoc-revel': 0.123.0-next.5
+      '@redocly/theme': 0.55.0-next.4
   1.6.0-next.4:
     timestamp: 1750098674000
     changes:
@@ -19172,6 +19259,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.4:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.4
   0.8.0-next.3:
     timestamp: 1750087903000
     changes:
@@ -20902,6 +20996,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.4:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.4
   0.14.0-next.3:
     timestamp: 1750087903000
     changes:
@@ -21788,6 +21889,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.4:
+    timestamp: 1750237399000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.4
   0.6.0-next.3:
     timestamp: 1750087903000
     changes:
