--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -14848,6 +14848,13 @@
     dependencies:
       '@redocly/theme': 0.6.0
 '@redocly/config':
+  0.26.2:
+    timestamp: 1750321133000
+    changes:
+      minor: []
+      patch:
+        - Enhanced scorecard configuration by adding support for additional rules properties in level definitions.
+    dependencies: {}
   0.26.1:
     timestamp: 1749646162000
     changes:
@@ -15854,6 +15861,13 @@
     dependencies:
       '@redocly/theme': 0.6.0
 '@redocly/mock-server':
+  0.2.16:
+    timestamp: 1750321133000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750178129`.
+    dependencies: {}
   0.2.15:
     timestamp: 1749026344000
     changes:
