docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jy3tejaev82d1canb4b6srwc
branchName: main
commitSha: 708d1c3c8f8d8ce5e6a6c97fca4f3045b30eebbb
commitUrl: https://github.com/Redocly/redocly/commit/708d1c3c8f8d8ce5e6a6c97fca4f3045b30eebbb

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,18 @@
 '@redocly/realm':
+  0.123.0-next.6:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch:
+        - 'Fixes a bug that caused invite routes to be hidden behind the login screen when `requiresLogin: true`.'
+        - Improved keyboard accessibility and screen reader support for the `version picker` component.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750261968`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.5
+      '@redocly/openapi-docs': 3.11.0-next.5
+      '@redocly/asyncapi-docs': 0.4.0-next.5
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.5
   0.123.0-next.5:
     timestamp: 1750237399000
     changes:
@@ -3323,6 +3337,20 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.6:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch:
+        - 'Fixes a bug that caused invite routes to be hidden behind the login screen when `requiresLogin: true`.'
+        - Improved keyboard accessibility and screen reader support for the `version picker` component.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750261968`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.5
+      '@redocly/openapi-docs': 3.11.0-next.5
+      '@redocly/asyncapi-docs': 0.4.0-next.5
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.5
   0.123.0-next.5:
     timestamp: 1750237399000
     changes:
@@ -5962,6 +5990,20 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.6:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch:
+        - 'Fixes a bug that caused invite routes to be hidden behind the login screen when `requiresLogin: true`.'
+        - Improved keyboard accessibility and screen reader support for the `version picker` component.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750261968`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.5
+      '@redocly/openapi-docs': 3.11.0-next.5
+      '@redocly/asyncapi-docs': 0.4.0-next.5
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.5
   0.123.0-next.5:
     timestamp: 1750237399000
     changes:
@@ -8601,6 +8643,20 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.6:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch:
+        - 'Fixes a bug that caused invite routes to be hidden behind the login screen when `requiresLogin: true`.'
+        - Improved keyboard accessibility and screen reader support for the `version picker` component.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750261968`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.5
+      '@redocly/openapi-docs': 3.11.0-next.5
+      '@redocly/asyncapi-docs': 0.4.0-next.5
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.5
   0.123.0-next.5:
     timestamp: 1750237399000
     changes:
@@ -11230,6 +11286,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.5:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch:
+        - Improved keyboard accessibility and screen reader support for the `version picker` component.
+    dependencies: {}
   0.55.0-next.4:
     timestamp: 1750237399000
     changes:
@@ -13101,6 +13164,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.5:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.5
   3.11.0-next.4:
     timestamp: 1750237399000
     changes:
@@ -16165,6 +16235,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.6:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.123.0-next.6
+      '@redocly/redoc': 0.123.0-next.6
+      '@redocly/redoc-reef': 0.123.0-next.6
+      '@redocly/redoc-revel': 0.123.0-next.6
+      '@redocly/theme': 0.55.0-next.5
   1.6.0-next.5:
     timestamp: 1750237399000
     changes:
@@ -19273,6 +19354,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.5:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.5
   0.8.0-next.4:
     timestamp: 1750237399000
     changes:
@@ -21010,6 +21098,14 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.5:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch:
+        - Improved keyboard accessibility and screen reader support for the `version picker` component.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.5
   0.14.0-next.4:
     timestamp: 1750237399000
     changes:
@@ -21903,6 +21999,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.5:
+    timestamp: 1750327265000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.5
   0.6.0-next.4:
     timestamp: 1750237399000
     changes:
