--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,17 @@
 '@redocly/realm':
+  0.123.0-next.7:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch:
+        - Fixed SSR style attribute issue in `img` tag string formatting.
+        - Fixed touch event issue with the `markdoc` tabs tag on mobile devices.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
+      '@redocly/asyncapi-docs': 0.4.0-next.6
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.6
   0.123.0-next.6:
     timestamp: 1750327265000
     changes:
@@ -3337,6 +3350,19 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.7:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch:
+        - Fixed SSR style attribute issue in `img` tag string formatting.
+        - Fixed touch event issue with the `markdoc` tabs tag on mobile devices.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
+      '@redocly/asyncapi-docs': 0.4.0-next.6
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.6
   0.123.0-next.6:
     timestamp: 1750327265000
     changes:
@@ -5990,6 +6016,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.7:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch:
+        - Fixed SSR style attribute issue in `img` tag string formatting.
+        - Fixed touch event issue with the `markdoc` tabs tag on mobile devices.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
+      '@redocly/asyncapi-docs': 0.4.0-next.6
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.6
   0.123.0-next.6:
     timestamp: 1750327265000
     changes:
@@ -8643,6 +8682,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.7:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch:
+        - Fixed touch event issue with the `markdoc` tabs tag on mobile devices.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
+      '@redocly/asyncapi-docs': 0.4.0-next.6
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.6
   0.123.0-next.6:
     timestamp: 1750327265000
     changes:
@@ -11286,6 +11337,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.6:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch:
+        - Fixed SSR style attribute issue in `img` tag string formatting.
+        - Fixed touch event issue with the `markdoc` tabs tag on mobile devices.
+    dependencies: {}
   0.55.0-next.5:
     timestamp: 1750327265000
     changes:
@@ -13164,6 +13223,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.6:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.6
   3.11.0-next.5:
     timestamp: 1750327265000
     changes:
@@ -16235,6 +16301,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.7:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
+      '@redocly/realm': 0.123.0-next.7
+      '@redocly/redoc-reef': 0.123.0-next.7
+      '@redocly/redoc-revel': 0.123.0-next.7
+      '@redocly/redoc': 0.123.0-next.7
   1.6.0-next.6:
     timestamp: 1750327265000
     changes:
@@ -19354,6 +19431,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.6:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.6
   0.8.0-next.5:
     timestamp: 1750327265000
     changes:
@@ -21098,6 +21182,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.6:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
   0.14.0-next.5:
     timestamp: 1750327265000
     changes:
@@ -21999,6 +22090,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.6:
+    timestamp: 1750340065000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.6
   0.6.0-next.5:
     timestamp: 1750327265000
     changes:
