--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,10 +1,12 @@
 '@redocly/realm':
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.54.2
       '@redocly/asyncapi-docs': 0.3.2
@@ -17,7 +19,9 @@
       minor: []
       patch:
         - Fixed SSR style attribute issue in `img` tag string formatting.
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.55.0-next.6
       '@redocly/asyncapi-docs': 0.4.0-next.6
@@ -105,7 +109,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -134,7 +138,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -150,7 +154,6 @@
           properties and components for future compatibility.
         - Added support for closing the image lightbox using the Escape key.
         - Added a possibility to override icon colors for "Search with AI" stars.
-        - Improved AI Search and `llms.txt` chunk content.
         - Improved AI Search chunk content.
         - Added `llms.txt` file generation.
         - Improved `Tabs` styles and added options to disable tabs and set their size to `small` or `medium`.
@@ -187,7 +190,6 @@
         - Fixed an issue where an OpenAPI page would jump unexpectedly while scrolling.
         - Fixed an issue where AI search failed to find information described in OpenAPI tags.
         - Fixed header display issue in files starting with a byte order mark (`BOM`).
-        - Improved Markdoc tag error reporting for missing quotation marks.
         - Fixed false positive errors for unclosed quotes in `markdoc` attributes.
         - Fixed redirect handling for complex preview URLs.
         - Removed duplicate teams from `$rbac` variable.
@@ -203,7 +205,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -3365,11 +3367,13 @@
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.54.2
       '@redocly/asyncapi-docs': 0.3.2
@@ -3382,7 +3386,9 @@
       minor: []
       patch:
         - Fixed SSR style attribute issue in `img` tag string formatting.
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.55.0-next.6
       '@redocly/asyncapi-docs': 0.4.0-next.6
@@ -3468,7 +3474,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -3497,7 +3503,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -3510,7 +3516,6 @@
           properties and components for future compatibility.
         - Added support for closing the image lightbox using the Escape key.
         - Added a possibility to override icon colors for "Search with AI" stars.
-        - Improved AI Search and `llms.txt` chunk content.
         - Improved AI Search chunk content.
         - Added `llms.txt` file generation.
         - Improved `Tabs` styles and added options to disable tabs and set their size to `small` or `medium`.
@@ -3533,7 +3538,6 @@
         - Fixed search history behavior to prevent frequent or redundant query entries.
         - Fixed incorrect paths in Markdoc tags with `REDOCLY_PREFIX_PATHS` when paths were relative or included file extensions.
         - Fixed header display issue in files starting with a byte order mark (`BOM`).
-        - Improved Markdoc tag error reporting for missing quotation marks.
         - Fixed false positive errors for unclosed quotes in `markdoc` attributes.
         - Fixed redirect handling for complex preview URLs.
         - Removed duplicate teams from `$rbac` variable.
@@ -3548,7 +3552,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -6045,11 +6049,13 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.54.2
       '@redocly/asyncapi-docs': 0.3.2
@@ -6062,7 +6068,9 @@
       minor: []
       patch:
         - Fixed SSR style attribute issue in `img` tag string formatting.
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.55.0-next.6
       '@redocly/asyncapi-docs': 0.4.0-next.6
@@ -6148,7 +6156,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -6177,7 +6185,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Added the `lightboxStyle` attribute that customizes the image lightbox styles.
@@ -6185,7 +6193,6 @@
         - Upgraded React to `19.x`.
         - Added support for closing the image lightbox using the Escape key.
         - Added a possibility to override icon colors for "Search with AI" stars.
-        - Improved AI Search and `llms.txt` chunk content.
         - Improved AI Search chunk content.
         - Added `llms.txt` file generation.
         - Improved `Tabs` styles and added options to disable tabs and set their size to `small` or `medium`.
@@ -6209,7 +6216,6 @@
         - Fixed search history behavior to prevent frequent or redundant query entries.
         - Fixed incorrect paths in Markdoc tags with `REDOCLY_PREFIX_PATHS` when paths were relative or included file extensions.
         - Fixed header display issue in files starting with a byte order mark (`BOM`).
-        - Improved Markdoc tag error reporting for missing quotation marks.
         - Fixed false positive errors for unclosed quotes in `markdoc` attributes.
         - Fixed redirect handling for complex preview URLs.
         - Removed duplicate teams from `$rbac` variable.
@@ -6225,7 +6231,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -8725,11 +8731,13 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.54.2
       '@redocly/asyncapi-docs': 0.3.2
@@ -8741,7 +8749,9 @@
     changes:
       minor: []
       patch:
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies:
       '@redocly/theme': 0.55.0-next.6
       '@redocly/asyncapi-docs': 0.4.0-next.6
@@ -8824,7 +8834,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -8851,7 +8861,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Added the `lightboxStyle` attribute that customizes the image lightbox styles.
@@ -8862,7 +8872,6 @@
         - Upgraded React to `19.x`.
         - Added support for closing the image lightbox using the Escape key.
         - Added a possibility to override icon colors for "Search with AI" stars.
-        - Improved AI Search and `llms.txt` chunk content.
         - Improved AI Search chunk content.
         - Added `llms.txt` file generation.
         - Improved `Tabs` styles and added options to disable tabs and set their size to `small` or `medium`.
@@ -8897,7 +8906,6 @@
         - Fixed an issue where an OpenAPI page would jump unexpectedly while scrolling.
         - Fixed an issue where AI search failed to find information described in OpenAPI tags.
         - Fixed header display issue in files starting with a byte order mark (`BOM`).
-        - Improved Markdoc tag error reporting for missing quotation marks.
         - Fixed false positive errors for unclosed quotes in `markdoc` attributes.
         - Fixed redirect handling for complex preview URLs.
         - Removed duplicate teams from `$rbac` variable.
@@ -8912,7 +8920,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -11394,11 +11402,13 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
   0.54.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies: {}
   0.55.0-next.6:
     timestamp: 1750340065000
@@ -11406,7 +11416,9 @@
       minor: []
       patch:
         - Fixed SSR style attribute issue in `img` tag string formatting.
-        - Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on mobile devices.
+        - >-
+          Fixed an issue where the tabs drop-down disappeared immediately after touch was released, preventing users from switching between tabs on
+          mobile devices.
     dependencies: {}
   0.55.0-next.5:
     timestamp: 1750327265000
@@ -11447,7 +11459,7 @@
         - Improved accessibility by adding descriptive `alt` text to footer icons.
     dependencies: {}
   0.54.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -11464,7 +11476,7 @@
     dependencies:
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.54.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -11498,7 +11510,7 @@
         - Fixed list formatting in code walkthroughs.
     dependencies: {}
   0.54.0-next.8:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch:
@@ -13287,7 +13299,7 @@
     dependencies: {}
 '@redocly/openapi-docs':
   3.10.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -13337,7 +13349,7 @@
     dependencies:
       '@redocly/replay': 0.14.0-next.1
   3.10.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -13353,7 +13365,7 @@
       '@redocly/replay': 0.14.0-next.0
       '@redocly/theme': 0.55.0-next.0
   3.10.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - >-
@@ -13376,7 +13388,7 @@
     dependencies:
       '@redocly/replay': 0.13.0
   3.10.0-next.10:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -15447,7 +15459,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.11.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -16297,7 +16309,7 @@
         - Enter prerelease mode.
     dependencies: {}
   0.5.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -16372,7 +16384,7 @@
     dependencies: {}
 '@redocly/portal-plugin-async-api':
   1.5.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -16459,7 +16471,7 @@
       '@redocly/theme': 0.55.0-next.1
       '@redocly/redoc': 0.123.0-next.1
   1.5.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -16482,7 +16494,7 @@
       '@redocly/redoc': 0.123.0-next.0
       '@redocly/theme': 0.55.0-next.0
   1.5.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`.
@@ -16494,7 +16506,7 @@
       '@redocly/redoc-reef': 0.122.0
       '@redocly/redoc-revel': 0.122.0
   1.5.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -19513,7 +19525,7 @@
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
   0.7.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -19562,7 +19574,7 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.1
   0.7.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -19577,14 +19589,14 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.0
   0.7.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
     dependencies:
       '@redocly/openapi-docs': 3.10.0
   0.7.0-next.10:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -21271,7 +21283,7 @@
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
   0.13.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -21322,7 +21334,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.1
   0.13.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -21339,7 +21351,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.13.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -21348,7 +21360,7 @@
     dependencies:
       '@redocly/theme': 0.54.0
   0.13.0-next.8:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -22186,7 +22198,7 @@
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
   0.5.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -22235,7 +22247,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.1
   0.5.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -22250,7 +22262,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.5.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -22258,7 +22270,7 @@
     dependencies:
       '@redocly/theme': 0.54.0
   0.5.0-next.8:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
