docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jyds1yj2nzmdqd41z23vqh4a
branchName: main
commitSha: 16b446987309c04a310bc19234b2deb1044b96e4
commitUrl: https://github.com/Redocly/redocly/commit/16b446987309c04a310bc19234b2deb1044b96e4

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -24439,3 +24439,10 @@ reunite:
       patch:
         - Fixed file path insertion in the editor for non-Markdown files by using plain paths instead of Markdown link format.
     dependencies: {}
+  v2025-06-23.1:
+    timestamp: 1750658354000
+    changes:
+      minor: []
+      patch:
+        - Updated authentication email templates for clarity and consistency.
+    dependencies: {}
