--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,19 @@
 '@redocly/realm':
+  0.123.0-next.8:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch:
+        - Fixed missing content in markdown code blocks and `{% markdoc-example %}` tags in AI Search and `llms.txt` chunks.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750342295`.
+        - Fixed external links being incorrectly prefixed with `REDOCLY_PREFIX_PATHS`.
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.7
+      '@redocly/asyncapi-docs': 0.4.0-next.7
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.7
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
     timestamp: 1750411910000
     changes:
@@ -3366,6 +3381,21 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.8:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch:
+        - Fixed missing content in markdown code blocks and `{% markdoc-example %}` tags in AI Search and `llms.txt` chunks.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750342295`.
+        - Fixed external links being incorrectly prefixed with `REDOCLY_PREFIX_PATHS`.
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.7
+      '@redocly/asyncapi-docs': 0.4.0-next.7
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.7
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
     timestamp: 1750411910000
     changes:
@@ -6048,6 +6078,21 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.8:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch:
+        - Fixed missing content in markdown code blocks and `{% markdoc-example %}` tags in AI Search and `llms.txt` chunks.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750342295`.
+        - Fixed external links being incorrectly prefixed with `REDOCLY_PREFIX_PATHS`.
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.7
+      '@redocly/asyncapi-docs': 0.4.0-next.7
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.7
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
     timestamp: 1750411910000
     changes:
@@ -8730,6 +8775,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.8:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750342295`.
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.7
+      '@redocly/asyncapi-docs': 0.4.0-next.7
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.7
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
     timestamp: 1750411910000
     changes:
@@ -11401,6 +11459,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.7:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch:
+        - Fixed extra bottom padding in the `Admonition` component.
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies: {}
   0.54.2:
     timestamp: 1750411910000
     changes:
@@ -13298,6 +13364,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.7:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.7
   3.10.2:
     timestamp: 1750411910000
     changes:
@@ -16383,6 +16456,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.8:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.123.0-next.8
+      '@redocly/redoc-reef': 0.123.0-next.8
+      '@redocly/redoc-revel': 0.123.0-next.8
+      '@redocly/redoc': 0.123.0-next.8
+      '@redocly/theme': 0.55.0-next.7
   1.5.2:
     timestamp: 1750411910000
     changes:
@@ -19524,6 +19608,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.7:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.7
   0.7.2:
     timestamp: 1750411910000
     changes:
@@ -21282,6 +21373,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.7:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.7
   0.13.2:
     timestamp: 1750411910000
     changes:
@@ -22197,6 +22295,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.7:
+    timestamp: 1750666691000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.7
   0.5.2:
     timestamp: 1750411910000
     changes:
