docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jyeeeydxsed0yzdgajz15yfh
branchName: main
commitSha: 5264676fa9deb89e8baf605a470489e03a4ae84f
commitUrl: https://github.com/Redocly/redocly/commit/5264676fa9deb89e8baf605a470489e03a4ae84f

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,13 @@
 '@redocly/realm':
+  0.123.0-next.9:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.8
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.8
   0.123.0-next.8:
     timestamp: 1750666691000
     changes:
@@ -3381,6 +3390,15 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.9:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.8
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.8
   0.123.0-next.8:
     timestamp: 1750666691000
     changes:
@@ -6078,6 +6096,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.9:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.8
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.8
   0.123.0-next.8:
     timestamp: 1750666691000
     changes:
@@ -8775,6 +8802,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.9:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.8
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.8
   0.123.0-next.8:
     timestamp: 1750666691000
     changes:
@@ -13364,6 +13400,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.8:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.8
   3.11.0-next.7:
     timestamp: 1750666691000
     changes:
@@ -16456,6 +16499,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.9:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.123.0-next.9
+      '@redocly/redoc': 0.123.0-next.9
+      '@redocly/redoc-reef': 0.123.0-next.9
+      '@redocly/redoc-revel': 0.123.0-next.9
   1.6.0-next.8:
     timestamp: 1750666691000
     changes:
@@ -19608,6 +19661,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.8:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.8
   0.8.0-next.7:
     timestamp: 1750666691000
     changes:
@@ -21373,6 +21433,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.8:
+    timestamp: 1750683741000
+    changes:
+      minor: []
+      patch:
+        - Fixed `Replay` crash when form-data example value was not a string.
+    dependencies: {}
   0.14.0-next.7:
     timestamp: 1750666691000
     changes:
